--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400&display=swap" rel="stylesheet">
+  <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <script src="script.js" defer></script>
   <title>Word Vine</title>
 </head>
@@ -124,3 +125,5 @@
   </div>
 
 </html>
+
+
