--- a/index.html
+++ b/index.html
@@ -122,6 +122,40 @@
       <div id="margin-left"></div>
       <div id="margin-right"></div>
 
+      <div class="stat-modal" id="stat-modal">
+        <div class="inner-stat-modal">
+          <h2>STATISTICS</h2>
+
+            <div class="stats-container">
+                <div class="streak-container">
+                  <div class="stk">Streak</div> <div data-streak-count class="stk-count">1</div>
+                </div>
+
+                <div class="best-score-container">
+                  <div class="best">Best</div> <div data-best-score class="best-score">0</div>
+                </div>
+
+                <div class="average-score-container">
+                  <div class="avg">Average</div> <div data-avg-score class="avg-score">0</div>
+                </div>
+
+                <div class="last-score-container">
+                  <div class="last">Last</div> <div data-last-score class="last-score">0</div>
+                </div>
+
+                <!-- <div class="accuracy-container">
+                  <div>Guess Accuracy</div> <div>45%</div>
+                </div> -->
+            </div>
+
+            <div class="graph-container">
+                  <h3 class="graph-header">Last 10 Games</h3>
+                  <div class="graph">COMING SOON. Hi Lynsey</div>
+            </div>
+  
+        </div>
+      </div>
+
   </div>
 
 </html>
